--- a/index.html
+++ b/index.html
@@ -1253,8 +1253,7 @@
       <div class="border-t border-gray-800 pt-8">
         <div class="flex flex-col md:flex-row justify-between items-center">
           <p class="text-gray-500 text-sm mb-4 md:mb-0">
-            &copy; 2023 Công Ty TNHH Sửa Chữa Máy Móc Việt Hàn. Tất cả các
-            quyền được bảo lưu.
+            &copy; 2023 Công Ty TNHH Sửa Chữa Máy Móc Việt Hàn. Design By F5 Team
           </p>
           <div class="flex space-x-6">
             <a href="#" class="text-gray-500 hover:text-white text-sm transition">Chính Sách Bảo Mật</a>
